--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      node: 20
+      nodejs: 20
     commands:
       - echo Installing dependencies...
       - npm ci --legacy-peer-deps
